--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,22 @@ body{
   color: rgba(255, 41, 91, 0.434);
 }
 
+.hover-underline {
+  position: relative;
+}
+
+.hover-underline::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: #000; 
+  transition: width 500ms; 
+}
+
+.hover-underline:hover::before {
+  width: 32%;
+}
+
